System data streams are not being upgraded in the feature migration API